temp/main/default/objects/User/fields/Approvers_in_Sales__c.field-meta.xml
<CustomField>
    <fullName>Approvers_in_Sales__c</fullName>
    <label>Approvers in Sales</label>
    <relationshipName>Sales_Approver</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>