temp/main/default/objects/User/fields/Sales_Approval_Business__c.field-meta.xml
<CustomField>
    <fullName>Sales_Approval_Business__c</fullName>
    <label>Sales Approval_Business</label>
    <relationshipName>Sales_Approver_Business</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>