temp/main/default/objects/User/fields/Sales_Approve_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Approve_Region__c</fullName>
    <label>Sales_Approve_Region</label>
    <relationshipName>Sales_Approver_Regional</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>